# MyHero-Firmware

./: .gitignore  CLAUDE.md  CMakeLists.txt  sdkconfig  sdkconfig.old
.cache/clangd/index/: Flash_Access.h.11678C817AB7ACDB.idx  FreeRTOS.h.7AA3D65E3F3AF18C.idx  FreeRTOSConfig.h.6ABA9C723E00EE2C.idx  FreeRTOSConfig_arch.h.49AA7FDB4D1A7C61.idx  FreeRTOS_POSIX.h.09B6F6A483D68850.idx  FreeRTOS_POSIX_internal.h.24B27B7C59B3EF33.idx  FreeRTOS_POSIX_mqueue.c.DE61D434BC975A13.idx  FreeRTOS_POSIX_portable.h.E1A2D6AB033A972E.idx  FreeRTOS_POSIX_portable_default.h.EDA5091554BD94EE.idx  FreeRTOS_POSIX_utils.c.BFF01E743D4581AB.idx  Hacl_Curve25519_joined.c.DD4FF189816FF15F.idx  IS31FL3216.c.6B9E428B911233CF.idx  IS31FL3216.h.105EB3364D54FE24.idx  Partition.cpp.14269F073198B242.idx  Partition.h.6253F4B3790184DF.idx  SPI_Flash.cpp.7A0CFE1AB3301805.idx  SPI_Flash.h.98363346925F4B19.idx  WL_Config.h.73F955689D0CE270.idx  (+3550 more)
components/my_board/: CMakeLists.txt  Kconfig.projbuild  component.mk
docs/: BLE_Integration_Guide.md
main/: CMakeLists.txt  firmware.c  idf_component.yml
main/Audio/: audio.c  audio.h
main/BLE/: ble.c  ble.h  ble_auth.c  ble_auth.h  ble_gatt.c  ble_gatt.h  ble_transfer.c  ble_transfer.h  ble_uuids.h
main/Buttons/: buttons.c  buttons.h
main/Debug/: debug_server.c  debug_server.h
main/Indicator/: indicator.c  indicator.h
main/Playlist/: playlist.c  playlist.h
main/Power/: power.c  power.h
main/Storage/: storage.c  storage.h
main/Volume/: volume.c  volume.h
scripts/: README.md  flash_new_device.py  get_dev.sh  reflash_device.py  setup_dev.py
(+5 files in other folders)
