idf_component_register(SRCS "firmware.c"
                        "Storage/storage.c"
                        "Power/power.c"
                        "Buttons/buttons.c"
                        "Indicator/indicator.c"
                        "Audio/audio.c"
                        "Volume/volume.c"
                        "Playlist/playlist.c"
                        "BLE/ble.c"
                        "BLE/ble_auth.c"
                        "BLE/ble_gatt.c"
                        "BLE/ble_transfer.c"
                        "Debug/debug_server.c"
                    INCLUDE_DIRS ".")
